# flay

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Containerfile  Containerfile.buildcache  Makefile  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: renovate.json
.github/workflows/: build-buildcache.yml  build-builder.yml  build.yml  docs.yml  integration_test.yml  lint.yml  python-publish.yml  sync-cargo-lock.yml  test.yml
flay/: __main__.py
flay/bundle/: __init__.py  collector.py  package.py
flay/cli/: __init__.py  app.py
flay/cli/debug/: __init__.py  bundle.py  treeshake.py
flay/common/: libcst.py  logging.py  module_spec.py  util.py
flay/treeshake/: node_remover.py  package.py
rust/: Cargo.toml
rust/src/: constants.rs  lib.rs
rust/src/bundle/: file_collector.rs  imports_transformer.rs  mod.rs
rust/src/common/: ast.rs  mod.rs  module_spec.rs
rust/src/common/ast/: checkers.rs  finders.rs  full_name.rs  mod.rs  transformer.rs  visitor_patch.rs
rust/src/common/ast/providers/: fully_qualified_name_provider.rs  imports_provider.rs
rust/src/providers/: fully_qualified_name_provider.rs  imports_provider.rs  mod.rs
rust/src/rustpython/: mod.rs  unparse.rs
rust/src/treeshake/: mod.rs  nodes_remover.rs  references_counter.rs
src/flay/: __main__.py  _flay_rs.pyi
src/flay/bundle/: __init__.py  collector.py  package.py
src/flay/cli/: __init__.py  app.py  bundle.py  options.py  treeshake.py
src/flay/cli/debug/: __init__.py  bundle.py  treeshake.py  types.py
src/flay/common/: compat.py  events.py  exc.py  libcst.py  logging.py  module_spec.py  pydantic.py  rich.py  util.py
src/flay/ecosystem/: import_aliases.py  preserve_symbols.py  safe_decorators.py
src/flay/minify/: README.md
src/flay/treeshake/: fixed.py  node_remover.py  package.py
tests/: test_integration.py
tests/test_bundle/: conftest.py  test_bundle_hello_world.py  test_bundle_package.py
tests/test_cli/: __init__.py  test_cli.py  test_cli_basic.py
tests/test_cli/test_debug/: test_bundle.py  test_treeshake.py
tests/test_treeshake/: conftest.py  test_treeshake_package.py
