[project]
name = "flay"
description = "Bundle, treeshake and minify your python projects"
authors = [{ name = "Jan Vollmer", email = "jan@vllmr.dev" }]
dependencies = [
  "importlib-metadata>=8.7.0; python_version < '3.11'",
  "rich>=14.1.0",
  "platformdirs>=4.3.8",
  "typing-extensions>=4.14.1",
  "clonf[click,settings]>=0.1.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jvllmr/flay"

[project.scripts]
flay = "flay.cli:cli"

[build-system]
requires = ["maturin>=1.9.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flay._flay_rs"
manifest-path = "rust/Cargo.toml"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
hook = "python -m maturin_import_hook site install"

test = "pytest"
test_matrix = "nox"
cov = "pytest --cov=flay --cov-report=html"
dev = "maturin develop"

[dependency-groups]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "setuptools>=80.9.0",
  "pip>=25.2",
  "wheel>=0.45.1",
  "pytest-env>=1.1.5",
  "packaging>=25.0",
]
lint = ["mypy>=1.17.1", "ruff>=0.12.7", "pre-commit>=4.2.0"]
dev = ["nox>=2025.5.1", "maturin>=1.9.3", "maturin-import-hook>=0.3.0"]
debug = ["tuna>=0.5.11"]
types = ["types-setuptools>=80.9.0.20250801"]

[tool.mypy]
python_version = "3.9"
files = "src/flay"
strict = true

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
filterwarnings = ["ignore:directory \"/run/secrets\""]
env = ["FLAY_DEBUG_APP=1"]
testpaths = ["tests"]

[tool.coverage.run]
source_dirs = ["src", "tests"]

[tool.coverage.paths]
source = ["/home/runner/work/", "D:\\a\\"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
]

[tool.ruff]
exclude = [
  ".venv",
  "tests/test_bundle/packages",
  "tests/test_treeshake/packages",
]
target-version = "py39"

[tool.ruff.lint]
ignore = ["UP038"]
select = ["RUF", "PERF", "G", "UP", "T", "ICN"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
typing = "t"
