[project]
name = "flay"
description = "Bundle and treeshake your python projects for containers"
authors = [{ name = "Jan Vollmer", email = "jan@vllmr.dev" }]
dependencies = [
  "importlib-metadata>=8.7.0; python_version < '3.11'",
  "rich>=14.2.0",
  "platformdirs>=4.4.0",
  "typing-extensions>=4.15.0",
  "clonf[click,settings]>=0.4.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
version = "0.1.0a2"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/jvllmr/flay"

[project.scripts]
flay = "flay.cli:cli"

[build-system]
requires = ["maturin>=1.9.6,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flay._flay_rs"
manifest-path = "rust/Cargo.toml"

[tool.uv]
package = true

[dependency-groups]
test = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "setuptools>=80.9.0",
  "pip>=25.2",
  "wheel>=0.45.1",
  "pytest-env>=1.1.5",
  "packaging>=25.0",
]
lint = ["ruff>=0.14.2", "pre-commit>=4.3.0", "ty>=0.0.5"]
dev = ["nox>=2025.10.16", "maturin>=1.9.6", "maturin-import-hook>=0.3.0"]
debug = ["tuna>=0.5.11"]
types = ["types-setuptools>=80.9.0.20250822"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.9"

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
filterwarnings = ["ignore:directory \"/run/secrets\""]
env = ["FLAY_DEBUG_APP=1"]
testpaths = ["tests"]

[tool.coverage.run]
source_dirs = ["src", "tests"]

[tool.coverage.paths]
source = ["/home/runner/work/", "D:\\a\\"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
]

[tool.ruff]
exclude = [
  ".venv",
  "tests/test_bundle/packages",
  "tests/test_treeshake/packages",
]
target-version = "py39"

[tool.ruff.lint]
ignore = ["UP038"]
select = ["RUF", "PERF", "G", "UP", "T", "ICN"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
typing = "t"
