[package]
name = "flay_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flay"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
rustpython-ast = { version = "0.4.0", features = ["visitor"] }
rustpython-parser = { version = "0.4.0" }
rustpython-unparser = { version = "0.2.4", features = ["transformer"] }
