[package]
name = "flay_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flay"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module"] }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.4" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.4" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.4" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.4" }
ruff_python_stdlib = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.4" }
